// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Jobs /> should render properly with jobs 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Job Queue
  </h2>,
  .emotion-0 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-0:nth-of-type(2) {
  width: 100%;
}

.emotion-0:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-125 {
  height: auto;
}

.emotion-124 {
  width: 100%;
  height: auto;
  border-spacing: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  white-space: nowrap;
}

.emotion-124 tr {
  background-color: #252525;
}

.emotion-124 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-124 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-124 tr:hover .gear {
  color: #b3b3b3;
}

.emotion-124 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-124 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-124 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-124 td {
  max-width: calc(100vw / 7);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-124 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-124 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-21 {
  cursor: pointer;
}

.emotion-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #c92300;
  background-color: #191919;
  font-family: Roboto Condensed;
}

.emotion-10 {
  text-align: center;
}

.emotion-12 {
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  min-width: 32px;
  height: 32px;
  padding: 8px;
  font-weight: 700;
  font-size: 15px;
  line-height: 19px;
  border-radius: 32px;
  color: #c92300;
  background-color: #191919;
}

.emotion-12:hover {
  border: 2px solid #808080;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 16px;
  width: 212px;
  position: relative;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-13 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #c92300;
}

.emotion-13:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-13:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-14 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #4ac565;
}

.emotion-14:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-14:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-15 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #ebb52e;
}

.emotion-15:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-15:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-16 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #4a90e2;
}

.emotion-16:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-16:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-20 {
  position: relative;
}

.emotion-19 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  color: #191919;
  padding: 6px;
  margin: -6px;
  border-radius: 32px;
}

.emotion-19:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-19[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-19:hover {
  color: #ffffff !important;
  background-color: #808080;
}

.emotion-22 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #ebb52e;
  background-color: #191919;
  font-family: Roboto Condensed;
}

.emotion-29 {
  height: 100%;
  -webkit-flex: 14 0 auto;
  -ms-flex: 14 0 auto;
  flex: 14 0 auto;
  background-color: #4a90e2;
}

.emotion-29:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-29:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-35 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #4ac565;
  background-color: #191919;
  font-family: Roboto Condensed;
}

.emotion-40 {
  height: 100%;
  -webkit-flex: 8 0 auto;
  -ms-flex: 8 0 auto;
  flex: 8 0 auto;
  background-color: #4ac565;
}

.emotion-40:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-40:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-41 {
  height: 100%;
  -webkit-flex: 4 0 auto;
  -ms-flex: 4 0 auto;
  flex: 4 0 auto;
  background-color: #4a90e2;
}

.emotion-41:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-41:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-80 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #4ac565;
}

.emotion-80:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-80:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

<div
    className="emotion-125"
  >
    <table
      className="emotion-124"
    >
      <thead>
        <tr>
          <th
            className="emotion-0"
          >
            Status
          </th>
          <th
            className="emotion-0"
          >
            Job Name
          </th>
          <th
            className="emotion-0"
          >
            Priority
          </th>
          <th
            className="emotion-0"
          >
            Created
          </th>
          <th
            className="emotion-0"
          >
            # Assets
          </th>
          <th
            className="emotion-0"
          >
            Errors
          </th>
          <th
            className="emotion-0"
          >
            Task Progress
          </th>
          <th
            className="emotion-0"
          >
            <div
              className="emotion-7"
            >
              <svg
                data-file-name="gear.svg"
                width={20}
              />
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="emotion-21"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-9"
            >
              Cancelled
            </div>
          </td>
          <td>
            <a
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              test-whitespace.json
            </a>
          </td>
          <td
            className="emotion-10"
          >
            100
          </td>
          <td>
            2019-11-07 01:38:36
          </td>
          <td
            className="emotion-10"
          >
            4
          </td>
          <td>
            <a
              className="emotion-12"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956/errors"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              4
            </a>
          </td>
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-18"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-17"
              >
                <div
                  className="emotion-13"
                />
                <div
                  className="emotion-14"
                />
                <div
                  className="emotion-15"
                />
                <div
                  className="emotion-16"
                />
              </div>
            </div>
          </td>
          <td>
            <div
              className="emotion-20"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="gear emotion-19"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr
          className="emotion-21"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-22"
            >
              In Progress
            </div>
          </td>
          <td>
            <a
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000955"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              test-whitespace.json
            </a>
          </td>
          <td
            className="emotion-10"
          >
            100
          </td>
          <td>
            2019-11-07 01:38:36
          </td>
          <td
            className="emotion-10"
          >
            40
          </td>
          <td>
            <a
              className="emotion-12"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000955/errors"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              40
            </a>
          </td>
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-18"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-17"
              >
                <div
                  className="emotion-13"
                />
                <div
                  className="emotion-14"
                />
                <div
                  className="emotion-15"
                />
                <div
                  className="emotion-29"
                />
              </div>
            </div>
          </td>
          <td>
            <div
              className="emotion-20"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="gear emotion-19"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr
          className="emotion-21"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-35"
            >
              Archived
            </div>
          </td>
          <td>
            <a
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308a-67c2-1433-8fef-0a580a000955"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              test-whitespace.json
            </a>
          </td>
          <td
            className="emotion-10"
          >
            100
          </td>
          <td>
            2019-11-07 01:36:29
          </td>
          <td
            className="emotion-10"
          >
            400
          </td>
          <td>
            <a
              className="emotion-12"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308a-67c2-1433-8fef-0a580a000955/errors"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              400
            </a>
          </td>
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-18"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-17"
              >
                <div
                  className="emotion-13"
                />
                <div
                  className="emotion-40"
                />
                <div
                  className="emotion-41"
                />
              </div>
            </div>
          </td>
          <td>
            <div
              className="emotion-20"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="gear emotion-19"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr
          className="emotion-21"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-9"
            >
              Cancelled
            </div>
          </td>
          <td>
            <a
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d53089-67c2-1433-8fef-0a580a000955"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              test-whitespace.json
            </a>
          </td>
          <td
            className="emotion-10"
          >
            100
          </td>
          <td>
            2019-11-07 01:35:36
          </td>
          <td
            className="emotion-10"
          >
            4000
          </td>
          <td>
            <a
              className="emotion-12"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d53089-67c2-1433-8fef-0a580a000955/errors"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              4000
            </a>
          </td>
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-18"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-17"
              >
                <div
                  className="emotion-13"
                />
              </div>
            </div>
          </td>
          <td>
            <div
              className="emotion-20"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="gear emotion-19"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr
          className="emotion-21"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-35"
            >
              Finished
            </div>
          </td>
          <td>
            <a
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c0975970-62ef-1f81-83f8-0a580a000954"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              test_officer
            </a>
          </td>
          <td
            className="emotion-10"
          >
            100
          </td>
          <td>
            2019-10-11 21:11:03
          </td>
          <td
            className="emotion-10"
          >
            40000
          </td>
          <td>
            <a
              className="emotion-12"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c0975970-62ef-1f81-83f8-0a580a000954/errors"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              40000
            </a>
          </td>
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-18"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-17"
              >
                <div
                  className="emotion-13"
                />
              </div>
            </div>
          </td>
          <td>
            <div
              className="emotion-20"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="gear emotion-19"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr
          className="emotion-21"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-22"
            >
              Active
            </div>
          </td>
          <td>
            <a
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              test_officer
            </a>
          </td>
          <td
            className="emotion-10"
          >
            100
          </td>
          <td>
            2019-10-11 21:03:27
          </td>
          <td
            className="emotion-10"
          >
            400000
          </td>
          <td>
            <a
              className="emotion-12"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954/errors"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              400000
            </a>
          </td>
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-18"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-17"
              >
                <div
                  className="emotion-13"
                />
              </div>
            </div>
          </td>
          <td>
            <div
              className="emotion-20"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="gear emotion-19"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr
          className="emotion-21"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-22"
            >
              Active
            </div>
          </td>
          <td>
            <a
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/1585ca03-4db0-14d1-8edd-0a580a000926"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              flipbook_export_1
            </a>
          </td>
          <td
            className="emotion-10"
          >
            1
          </td>
          <td>
            2019-08-01 22:52:19
          </td>
          <td
            className="emotion-10"
          >
            0
          </td>
          <td />
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-18"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-17"
              >
                <div
                  className="emotion-80"
                />
              </div>
            </div>
          </td>
          <td>
            <div
              className="emotion-20"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="gear emotion-19"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr
          className="emotion-21"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-22"
            >
              Active
            </div>
          </td>
          <td>
            <a
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/be47702d-cbd6-1cce-a096-0a580a000920"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              export_7_8_2019
            </a>
          </td>
          <td
            className="emotion-10"
          >
            1
          </td>
          <td>
            2019-07-08 18:53:44
          </td>
          <td
            className="emotion-10"
          >
            0
          </td>
          <td />
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-18"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-17"
              >
                <div
                  className="emotion-13"
                />
              </div>
            </div>
          </td>
          <td>
            <div
              className="emotion-20"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="gear emotion-19"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr
          className="emotion-21"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-22"
            >
              Active
            </div>
          </td>
          <td>
            <a
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/be47702c-cbd6-1cce-a096-0a580a000920"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              export_7_8_2019___
            </a>
          </td>
          <td
            className="emotion-10"
          >
            1
          </td>
          <td>
            2019-07-08 18:43:03
          </td>
          <td
            className="emotion-10"
          >
            0
          </td>
          <td />
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-18"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-17"
              >
                <div
                  className="emotion-13"
                />
              </div>
            </div>
          </td>
          <td>
            <div
              className="emotion-20"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="gear emotion-19"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr
          className="emotion-21"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-22"
            >
              Active
            </div>
          </td>
          <td>
            <a
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/acd91540-08c1-199f-b899-0a580a00091e"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              sdlc-testdata-import.json
            </a>
          </td>
          <td
            className="emotion-10"
          >
            100
          </td>
          <td>
            2019-07-03 16:49:15
          </td>
          <td
            className="emotion-10"
          >
            0
          </td>
          <td />
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-18"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-17"
              >
                <div
                  className="emotion-13"
                />
              </div>
            </div>
          </td>
          <td>
            <div
              className="emotion-20"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="gear emotion-19"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr
          className="emotion-21"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-22"
            >
              Active
            </div>
          </td>
          <td>
            <a
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/acd9153f-08c1-199f-b899-0a580a00091e"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              sdlc-testdata-import.json
            </a>
          </td>
          <td
            className="emotion-10"
          >
            100
          </td>
          <td>
            2019-07-03 01:29:41
          </td>
          <td
            className="emotion-10"
          >
            49
          </td>
          <td>
            <a
              className="emotion-12"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/acd9153f-08c1-199f-b899-0a580a00091e/errors"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              49
            </a>
          </td>
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-18"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-17"
              >
                <div
                  className="emotion-13"
                />
                <div
                  className="emotion-80"
                />
              </div>
            </div>
          </td>
          <td>
            <div
              className="emotion-20"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="gear emotion-19"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div>
       
    </div>
    <Pagination
      currentPage={1}
      totalPages={1}
    />
    <div>
       
    </div>
  </div>,
]
`;

exports[`<Jobs /> should render properly with no jobs 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Job Queue
  </h2>,
  .emotion-13 {
  height: 100%;
}

.emotion-12 {
  width: 100%;
  height: 100%;
  border-spacing: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  white-space: nowrap;
}

.emotion-12 tr {
  background-color: #252525;
}

.emotion-12 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-12 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-12 tr:hover .gear {
  color: #b3b3b3;
}

.emotion-12 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-12 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-12 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-12 td {
  max-width: calc(100vw / 7);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-12 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-12 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-0 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-0:nth-of-type(2) {
  width: 100%;
}

.emotion-0:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11 {
  height: 100%;
  pointer-events: none;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  font-size: 15px;
  line-height: 19px;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 18px;
  line-height: 21px;
}

<div
    className="emotion-13"
  >
    <table
      className="emotion-12"
    >
      <thead>
        <tr>
          <th
            className="emotion-0"
          >
            Status
          </th>
          <th
            className="emotion-0"
          >
            Job Name
          </th>
          <th
            className="emotion-0"
          >
            Priority
          </th>
          <th
            className="emotion-0"
          >
            Created
          </th>
          <th
            className="emotion-0"
          >
            # Assets
          </th>
          <th
            className="emotion-0"
          >
            Errors
          </th>
          <th
            className="emotion-0"
          >
            Task Progress
          </th>
          <th
            className="emotion-0"
          >
            <div
              className="emotion-7"
            >
              <svg
                data-file-name="gear.svg"
                width={20}
              />
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="emotion-11"
        >
          <td
            colSpan={8}
          >
            <div
              className="emotion-10"
            >
              <div
                className="emotion-9"
              >
                <svg
                  data-file-name="noJobs.svg"
                  width={200}
                />
                <div>
                  There are currently no jobs in the queue.
                </div>
                <div>
                  Any new job will appear here.
                </div>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div>
       
    </div>
    <div>
       
    </div>
  </div>,
]
`;
